# quantum_simulator

./: .gitignore  CI_CD_FIXED_SUCCESS_REPORT.md  COMPLETE_GAPS_FILLED_SUMMARY.md  DEPLOYMENT_SOLUTIONS.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOY_QUANTUM_NFT.bat  EXTRAVAGANT_ANCIENT_QUANTUM_ALGORITHMS.md  FINAL_DEPLOYMENT_EXECUTION.md  HIEROGLYPHIC_QUANTUM_BREAKTHROUGH.md  LEGENDARY_QUANTUM_NFT_DEPLOYMENT.ps1  LICENSE  MONETIZATION_STRATEGY.md  MONETIZATION_SUCCESS.md  NEXT_STEPS_ACTION_PLAN.md  NORSE_VIKING_QUANTUM_BREAKTHROUGH.md  PROJECT_SUMMARY.md  Procfile  QUANTUM_DISCOVERY_ACHIEVEMENT_SUMMARY.md  QUANTUM_NFT_CICD_EXCELLENCE_SUMMARY.md  QUANTUM_NFT_EMPIRE_SUMMARY.md  QUANTUM_NFT_PERFORMANCE_REPORT.md  QUANTUM_NFT_TESTING_EXCELLENCE_REPORT.md  QUANTUM_OPTIMIZATION_BREAKTHROUGH.md  QUANTUM_PLATFORM_MANIFEST.md  QUANTUM_STUDIO_MONETIZATION.md  QUANTUM_VISUALIZATION_BREAKTHROUGH.md  QuantumAlgorithmNFT_Production.sol  QuantumNFTInvariantHandler.sol  QuantumNFTPerformanceBenchmark.sol  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  READY_FOR_LAUNCH.md  SIMPLE_DEPLOY.ps1  STRESS_TEST_SUCCESS_SUMMARY.md  STUDIO_SUCCESS_SUMMARY.md  ULTIMATE_QUANTUM_CIVILIZATION_FUSION_BREAKTHROUGH.md  adaptive_quantum_circuits.py  advanced_quantum_demo_working.py  advanced_quantum_discovery.py  breakthrough_demo_simple.py  (+56 more)
.github/workflows/: quantum-nft-cicd.yml
discovered_algorithms/: README.md
discovered_algorithms/catalog/: algorithm_registry.json  session_002_summary.json
discovered_algorithms/optimization/: QAlgo-Optimization-1.json
discovered_algorithms/search/: QAlgo-Search-2.json
discovered_algorithms/tools/: advanced_alien_math_animation_engine.py  algorithm_analysis_20250721_071112.json  algorithm_analysis_20250721_085310.json  algorithm_analyzer.py  alien_json_visualization_engine.py  alien_math_animations_fx.py  alien_math_fx_demo.py  alien_math_showcase.py  alien_math_visual_generator.py  alien_math_world_generator.py  alien_mathematics_vr_universe.py  alien_multiverse_exploration_report_20250722_001209.txt  alien_quantum_visualization.py  alien_world_3d_visualizer.py  alien_world_report_20250722_001418.txt  alien_world_summary_20250722_001418.json  apply_alien_math_example.py  aztec_mayan_quantum_discovery.py  babylonian_cuneiform_discovery.py  babylonian_cuneiform_session_20250721_093002.json  babylonian_cuneiform_session_20250721_093122.json  breakthrough_alien_math_animations.py  casino_packages_demo.py  celtic_druid_quantum_discovery.py  celtic_druid_session_20250721_102400.json  complete_monetization_summary.py  cosmic_energy_harvest_20250721_123423.json  cosmic_energy_harvest_20250721_123623.json  cosmic_energy_harvesting_system.py  dashboard_demo.py  dual_monetization_plan_20250721_125746.json  dual_monetization_plan_20250721_125755.json  enchanted_quantum_casino_multiverse.py  enchanted_quantum_multiverse_20250721_114319.json  enchanted_quantum_multiverse_20250721_114436.json  enhanced_alien_world_explorer.py  enhanced_discovery_session.py  enhanced_quantum_bonus_system.py  enhanced_quantum_session_20250721_085317.json  enhanced_quantum_session_20250721_085845.json  (+99 more)
script/: DeployQuantumNFT.sol
src/: QuantumAlgorithmNFT.sol  SimpleTest.sol
temp/: DeployQuantumNFT.sol
test/: QuantumAlgorithmNFT.t.sol  SimpleTest.t.sol
zkaedi_achievements/: README.md  __init__.py  demo_supercharged_system.py
zkaedi_achievements/core/: __init__.py  supercharged_achievement_engine.py
zkaedi_achievements/generators/: __init__.py  ultimate_monetization_achievements.py
zkaedi_achievements/squad_battles/: __init__.py  ai_squad_battle_arena.py
